# bridgesplit-program-template

./: .env  .eslintrc.js  .gitignore  Anchor.toml  LICENSE  README copy.md  README.md  package.json  tsconfig.json
.github/workflows/: build.yml
programs/bridgesplit/: Cargo.toml
programs/bridgesplit/src/: errors.rs  lib.rs  utils.rs
programs/bridgesplit/src/instructions/: example_instruction.rs
programs/bridgesplit/src/state/: example_state.rs
programs/example/: Cargo.toml
programs/example/src/: errors.rs  lib.rs  utils.rs
programs/example/src/instructions/: buyout.rs  cancel_sale.rs  claim_buyout.rs  example_instruction.rs  ix.rs  mod.rs  post_sale.rs
programs/example/src/state/: example_state.rs  mod.rs
tests/: example_instruction.spec.ts  example_program.spec.ts
