[package]
name = "example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
thiserror = "1.0"
switchboard-program = "0.1.59"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
bytemuck = { version = "1.7", features = ["derive"] }
