[package]
name = "example"
version = "0.1.0"
description = "Example anchor program template"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
thiserror = "1.0"
