[package]
name = "example"
version = "0.1.0"
description = "Example anchor program template"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
num_enum = "0.5.6"
vault = { git="ssh://git@github.com/bridgesplit/bridgesplit-program.git", features = ["no-entrypoint", "cpi"]}

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]